# takeuchi_lesson

./: .gitignore  README.md
chapter10/: build_qa_vectorstore.py  main.py  pyproject.toml
chapter10-gemini-cli/: GEMINI.md
chapter10/data/: bearmobile_QA_small.csv
chapter10/tools/: fetch_qa_content.py  fetch_stores_by_prefecture.py
chapter10/vectorstore/qa_vectorstore/: index.faiss  index.pkl
chapter2/: pyproject.toml
chapter3/: main.py  main.py.bak  pyproject.toml
chapter4/: main.py  pyproject.toml
chapter6/: main.py  pyproject.toml
chapter7/pages/: 1-UploadPDF.py
chapter7_archive/: main.py  pyproject.toml
chapter7_archive/pages/: 2-PDFQA.py
chapter8/: main.py  pyproject.toml
chapter9-openai/: main.py  pyproject.toml
chapter9_archive/: main.py  pyproject.toml
chapter9_archive/tools/: fetch_page.py  search_ddg.py
http/: index.html
http/alpha/: alpha-1.html  alpha-2.html
