[project]
name = "chapter2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-anthropic>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
