[project]
name = "chapter4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-anthropic>=1.3.0",
    "langchain-core>=1.2.3",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
]
