[project]
name = "chapter9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.10.0",
    "html2text>=2025.4.15",
    "langchain>=1.2.7",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "readability-lxml>=0.8.4.1",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
]
